src/objects/cnotify__Notify_Record__c.object
<CustomObject>
    <fields>
        <fullName>cnotify__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notify Record</relationshipLabel>
        <relationshipName>Notify_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cnotify__Amount_to_Current__c</fullName>
        <label>Amount to Current</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Borrower_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is taken for testing purpose on this Notify_Record__c object.</description>
        <label>Borrower Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notify Record (Borrower Contact)</relationshipLabel>
        <relationshipName>Borrower_Notify_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cnotify__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Notify Record</relationshipLabel>
        <relationshipName>Notify_Record</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cnotify__Interest_Accrued_Not_Due__c</fullName>
        <label>Interest Accrued Not Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Loan_Account__c</fullName>
        <externalId>true</externalId>
        <label>Loan Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Next_Installment_Date__c</fullName>
        <label>Next Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cnotify__Number_of_Days_Overdue__c</fullName>
        <label>Number of Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Previous_Installment_Date__c</fullName>
        <label>Previous Installment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cnotify__Principal_Remaining__c</fullName>
        <label>Principal Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Line of Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cnotify__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <label>Notify Record</label>
    <nameField>
        <label>Notify Configuration Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notify Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>